--- a/docs/Topics and Concepts/ELN.mdx
+++ b/docs/Topics and Concepts/ELN.mdx
@@ -9,3 +9,5 @@ ELNs are a key prerequisite to a comprehensive, digital documentation of researc
 ### Electronic Lab Notebooks (ELNs) in NFDI4Chem
 
 ### Chemotion
+
+Chemotion is the reference instance of NFDI4Chem
