--- a/docs/User profiles/Organic chemistry.mdx
+++ b/docs/User profiles/Organic chemistry.mdx
@@ -2,15 +2,63 @@
 sidebar_position: 1
 ---
 
-# Synthetic organic/inorganic chemistry
+## User profile Synthetic Organic/Inorganic Chemist
 
-Article about Synthetic organic/inorganic chemistry
+***Summary:***
+
+The main goal of a synthetic organic or inorganic chemist is to synthesise desired compounds. Established methods are applied, or new synthetic methods are developed. A typical workflow starts with the planning of the experiments and methods. These are then conducted and research data as well as accompanying metadata are collected along the way. Once the final product is obtained, it is analysed with suitable methods to identify properties of the synthesised material or to ascertain the efficacy of the selected synthetic method. Processing and interpretation of the obtained research data will lead to a proof of concept for a given reaction, optimised conditions for future experiments or upscaling.
+
+***Type of experiments:***
+
+- Synthesis: 
+    - Preparation of organic/inorganic substances.
+    - Small-scale experiments for screening/optimisation of reaction conditions.
+    - Upscaling of reactions to obtain sufficient product for comprehensive characterisation or as starting material for subsequent synthesis steps.
 
 
-Ut egestas metus ut ante luctus, tristique malesuada ante pretium. Mauris aliquet consectetur eros, eget mollis augue congue sollicitudin. Mauris iaculis metus vitae felis hendrerit, ac tempus tortor vestibulum. Proin ullamcorper, metus sed ultrices molestie, velit nulla feugiat odio, a fermentum erat sem quis sem. Maecenas pharetra mauris non luctus hendrerit. Donec non mauris blandit, fringilla lacus sed, porttitor sem. Integer a ante massa. Morbi rhoncus quis odio in maximus. Nullam mollis pulvinar condimentum. Nunc nulla magna, porttitor a porttitor id, suscipit non nibh. Fusce blandit purus maximus felis egestas imperdiet. Donec quis convallis nibh.
+- Analysis:
+    - Product characterisation with feasible methods (e.g. NMR spectroscopy, mass spectrometry, IR spectroscopy, UV/vis spectroscopy, elemental analysis).
+    - to assess screening/optimisation conditions.
+    - to investigate desired product properties.
+    - to characterise materials’ properties comprehensively.
 
-Cras dictum pharetra lectus, a laoreet nulla commodo at. Proin aliquet risus eu nisi tempus, non lobortis mauris tristique. Vivamus at libero a risus ornare commodo. Integer in ante vestibulum, feugiat dolor at, blandit dui. Sed at dui non erat hendrerit ornare sit amet at lorem. Sed sed urna sodales, hendrerit elit sit amet, auctor turpis. Proin lobortis urna nec pulvinar iaculis. Morbi vel mollis erat, ut finibus eros. Phasellus in pharetra dui. Etiam vel ultricies tellus, in mollis ante. Aenean vel lectus odio. Ut tincidunt vel neque non faucibus. Mauris pulvinar velit fermentum, fermentum urna ac, ornare turpis. Integer vel tristique orci. Nulla malesuada mattis erat sed condimentum. Cras dui libero, iaculis a fringilla eget, luctus a diam.
+***Planning of experiments:***
 
-Integer cursus ipsum quis turpis feugiat, in elementum odio porta. Nulla nec ligula metus. Aliquam varius nisi nec mauris bibendum tristique. Maecenas vel elit ac leo suscipit facilisis eget non est. Donec aliquam suscipit erat. Praesent at odio et magna vestibulum euismod a eu nunc. Sed tristique id sapien quis aliquet. Suspendisse ac odio volutpat, mattis odio at, aliquam mauris. Curabitur ac nisl vitae ante interdum auctor vel sed ex. Donec ac accumsan magna. Sed orci justo, commodo dictum nibh vel, vestibulum posuere metus. Proin mollis sapien at libero tempor porttitor. Quisque quis risus posuere, varius diam sed, consectetur risus.
+- The implementation of newly inspired ideas is supported by previous work stored in the local instance of the electronic lab notebook (e.g. Chemotion ELN) of the own research group (overview of ELNs for synthetic chemists), scientific literature or datasets published in repositories (discipline-specific repositories such as the Chemotion repository).
+- Experimental design follows a logical order to achieve a specific goal, such as increasing yield or purity.
+- Planning is concluded by adding the experimental details (e.g. quantities and scheduling procedures). All metadata is documented in an ELN (e.g. Chemotion ELN) including references.
 
-Nunc arcu leo, porta ac laoreet vitae, blandit eget elit. Vestibulum id augue ullamcorper, interdum magna nec, cursus odio. Donec quam justo, posuere sit amet ligula sit amet, pharetra pellentesque dolor. Nullam ante dui, porta vitae auctor eget, accumsan ut mauris. Nunc finibus malesuada accumsan. Sed at libero a ex sollicitudin aliquam. Donec in ante eget nisi cursus euismod. Fusce lorem justo, mollis quis commodo in, pulvinar at libero.
+***Documentation of experiments:***
+
+- Documentation of research data and metadata is carried out digitally using an ELN.
+- Experimental conditions (e.g. solvents, temperature, duration, pressure) are noted in the ELN.
+- Observations and results of analytical methods with no digital output (i.e. no data files) are added manually to the ELN entry of the experiment, which may include appearance, yield, melting point, optical rotation or TLC Rf values (with metadata where applicable).
+- Obtained data from analytical instruments (e.g. NMR, MS or IR data) are uploaded to the Chemotion ELN in open file formats and directly attached to the respective ELN experiment entry including instrumental setup metadata.
+- Metadata related to the obtained data, such as temperature or solvent of measurement, have to be provided according to metadata standards, e.g. x.
+
+***Data producing methods:***
+
+- Data can be collected during the experiment or after the experiment by analysing the obtained product.
+- Manually determined data: Experimental observations, appearance, yield, melting/boiling point, optical rotation, TLC Rf values, refraction index, etc.
+- Digital data are obtained with analytical devices. An overview on file extensions, file sizes and converters for several analytical methods is given in the table below.
+- Raw data files in proprietary file formats should be saved alongside interoperable open file formats by using converters or the software of the analytical device. If no specific open format is currently available, export as .txt or .csv is recommended. Please be aware that metadata included in the header of .txt or .csv files may not follow a defined (open) format and metadata should be additionally also added into the ELN.
+
+|Analytical method|Exemplary proprietary file extensions|Typical size of propietary file|Converter to open file format|Recommendation for open file extension*|File size of open format|
+|:------------|:-----------------|:--------|:--------|:------------|:--------------|
+|NMR spectroscopy|.fid|<1-50 MB|Topspin|.jdx|~1 MB|
+|Mass spectrometry|.raw|~250 MB|Proteowizard|.mzML|~250 MB|
+|IR spectroscopy|.ispd|<1 MB| |.dx|<1 MB|
+
+
+***Data analysis:***
+
+- Research data are processed, analysed and compared (also to data of other experiments) within the Chemotion ELN.
+- Optionally, preprocessing of digital data with software of analytical device before data are transferred to the Chemotion ELN (cf. data producing methods).
+- A detailed view, evaluation and interpretation of results is carried out with the Chemotion ELN features.
+
+***Publication of research data:***
+
+- In addition to a research article in a scientific journal, the underlying research data are published in a repository and linked to the article to realise research data management according to the FAIR data principles (Best practice examples).
+- Data publication in a repository includes raw and processed data for reuse.
+- The use of the Chemotion ELN enables a direct transfer of research data and the respective metadata into the Chemotion Repository. Subsequently, these data are automatically shared with other repositories, e.g. PubChem. For the publication of research data in other discipline-specific repositories, such as the CCDC for crystallographic data, data have to be exported from the Chemotion ELN and uploaded into the respective database.
+- A persistent identifier (e.g. DOI) is generated for a dataset by a repository (via DataCite for the Chemotion Repository), which is given in the journal publication or corresponding supporting information to link the data publication with the manuscript.
