--- a/docs/User profiles/Organic chemistry.mdx
+++ b/docs/User profiles/Organic chemistry.mdx
@@ -58,7 +58,7 @@ The main goal of a synthetic organic or inorganic chemist is to synthesise desir
 
 ***Publication of research data:***
 
-- In addition to a research article in a scientific journal, the underlying research data are published in a repository and linked to the article to realise research data management according to the [FAIR data principles](/docs/Topics%20and%20Concepts/FAIR%20data%20principles) ([Best practice examples](/Topics%20and%20Concepts/Best%20practice)).
+- In addition to a research article in a scientific journal, the underlying research data are published in a repository and linked to the article to realise research data management according to the [FAIR data principles](/docs/Topics%20and%20Concepts/FAIR%20data%20principles) ([Best practice examples](/docs/Topics%20and%20Concepts/Best%20practice)).
 - Data publication in a repository includes raw and processed data for reuse.
 - The use of the Chemotion ELN enables a direct transfer of research data and the respective metadata into the Chemotion Repository. Subsequently, these data are automatically shared with other repositories, e.g. [PubChem](https://pubchem.ncbi.nlm.nih.gov/). For the publication of research data in other discipline-specific repositories, such as the [CCDC](https://www.ccdc.cam.ac.uk/) for crystallographic data, data have to be exported from the Chemotion ELN and uploaded into the respective database.
 - A [persistent identifier](/docs/Topics%20and%20Concepts/PID) (e.g. DOI) is generated for a dataset by a repository (via [DataCite](https://datacite.org/) for the Chemotion Repository), which is given in the journal publication or corresponding supporting information to link the data publication with the manuscript.
