--- a/docs/User profiles/Organic chemistry.mdx
+++ b/docs/User profiles/Organic chemistry.mdx
@@ -45,10 +45,23 @@ The main goal of a synthetic organic or inorganic chemist is to synthesise desir
 
 |Analytical method|Exemplary proprietary file extensions|Typical size of propietary file|Converter to open file format|Recommendation for open file extension*|File size of open format|
 |:------------|:-----------------|:--------|:--------|:------------|:--------------|
-|NMR spectroscopy|.fid|<1-50 MB|Topspin|.jdx|~1 MB|
-|Mass spectrometry|.raw|~250 MB|Proteowizard|.mzML|~250 MB|
-|IR spectroscopy|.ispd|<1 MB| |.dx|<1 MB|
+|NMR spectroscopy|.fid|<1-50 MB|MNova  Topspin|.jdx  .zip|~1 MB|
+|Mass spectrometry|.raw   .d   .baf|~250 MB|Proteowizard|.mzML|~250 MB|
+|IR spectroscopy|.ispd .icIR|<1 MB| |.dx|<1 MB|
+|Raman spectroscopy|.dpt   .spc  .icRaman  .sps  .acs|<1 MB|proprietary software|.dx|<1 MB|
+|UV/vis spectroscopy|.dsw   .str   .bsk   .bkn   .ksd   .jws   .jwb   .str8   .spc   .sre|<1 MB|proprietary software|.csv|<1 MB|
+|Fluorescence spectroscopy|.fds   .fs2f   .jws   .opj|<1 MB|proprietary software|.dx|<1 MB|
+|Single crystal XRD|.raw|<1 MB|proprietary software|.cif|<1 MB|
+|Powder XRD|.raw|<1 MB|proprietary software|.xyd|<1 MB|
+|Gas chromatography|.gcd   .d|~2 MB|proprietary software|.txt|<1 MB|
+|HPLC|.xls|<1 MB|proprietary software|.csv|<1 MB|
+|Cyclic voltammetry|.nox   .pssession|~8 MB|proprietary software|.txt|<1 MB|
+|EPR spectroscopy|.spe|<1 MB|proprietary software|.txt|<1 MB|
+|Differential scanning calorimetry|.ngb-dsu   .ngb-taa|<1 MB|proprietary software|.csv|<1 MB|
+|Elemental analysis| | |proprietary software|.txt|<1 MB|
+|Physisorption|.smp|<1 MB|proprietary software|.csv|<1 MB|
 
+** *This table will be continuously updated with new recommendations on interoperable open file formats.**
 
 ***Data analysis:***
 
