Capitalization of headings

--- a/docs/User profiles/Organic chemistry.mdx
+++ b/docs/User profiles/Organic chemistry.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 1
 ---
 
-## User profile Synthetic Organic/Inorganic Chemist
+# Synthetic Organic/Inorganic Chemist
 
 ***Summary:***
 
