--- a/docs/User profiles/Organic chemistry.mdx
+++ b/docs/User profiles/Organic chemistry.mdx
@@ -51,7 +51,7 @@ The main goal of a synthetic organic or inorganic chemist is to synthesise desir
 |Raman spectroscopy|.dpt <br /> .spc <br /> .icRaman <br /> .sps <br /> .acs|<1 MB|proprietary software|.dx|<1 MB|
 |UV/vis spectroscopy|.dsw <br /> .str <br /> .bsk <br /> .bkn <br /> .ksd <br /> .jws <br /> .jwb <br /> .str8 <br /> .spc <br /> .sre|<1 MB|proprietary software|.csv|<1 MB|
 |Fluorescence spectroscopy|.fds <br /> .fs2f <br /> .jws <br /> .opj|<1 MB|proprietary software|.dx|<1 MB|
-|Single crystal XRD|.raw|<1 MB|proprietary software|.cif|<1 MB|
+|Single crystal XRD|.raw|~1 GB|proprietary software|.cif|<1 MB|
 |Powder XRD|.raw|<1 MB|proprietary software|.xyd|<1 MB|
 |Gas chromatography|.gcd <br /> .d|~2 MB|proprietary software|.txt|<1 MB|
 |HPLC|.xls|<1 MB|proprietary software|.csv|<1 MB|
