--- a/docs/10_user_profiles/10_synthetic_chemistry.mdx
+++ b/docs/10_user_profiles/10_synthetic_chemistry.mdx
@@ -2,11 +2,11 @@
 title: "Synthetic Organic/Inorganic Chemist"
 ---
 
-***Summary:***
+## Summary:
 
 The main goal of a synthetic organic or inorganic chemist is to synthesise desired compounds. Established methods are applied, or new synthetic methods are developed. A typical workflow starts with the planning of the experiments and methods. These are then conducted and research data as well as accompanying metadata are collected along the way. Once the final product is obtained, it is analysed with suitable methods to identify properties of the synthesised material or to ascertain the efficacy of the selected synthetic method. Processing and interpretation of the obtained research data will lead to a proof of concept for a given reaction, optimised conditions for future experiments or upscaling.
 
-***Type of experiments:***
+## Type of experiments:
 
 - Synthesis: 
     - Preparation of organic/inorganic substances.
@@ -20,13 +20,13 @@ The main goal of a synthetic organic or inorganic chemist is to synthesise desir
     - to investigate desired product properties.
     - to characterise materials’ properties comprehensively.
 
-***Planning of experiments:***
+## Planning of experiments:
 
 - The implementation of newly inspired ideas is supported by previous work stored in the local instance of the electronic lab notebook (e.g. [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html)) of the own research group ([overview of ELNs for synthetic chemists](/docs/Topics%20and%20Concepts/ELN)), scientific literature or datasets published in [repositories](/docs/Topics%20and%20Concepts/Repositories) (discipline-specific repositories such as the [Chemotion repository](https://www.chemotion-repository.net/welcome)).
 - Experimental design follows a logical order to achieve a specific goal, such as increasing yield or purity.
 - Planning is concluded by adding the experimental details (e.g. quantities and scheduling procedures). All metadata is documented in an ELN (e.g. Chemotion ELN) including references.
 
-***Documentation of experiments:***
+## Documentation of experiments:
 
 - [Documentation of research data](/docs/Problems/Data%20Documentation) and [metadata](/docs/Topics%20and%20Concepts/Metadata) is carried out digitally using an ELN.
 - Experimental conditions (e.g. solvents, temperature, duration, pressure) are noted in the ELN.
@@ -34,7 +34,7 @@ The main goal of a synthetic organic or inorganic chemist is to synthesise desir
 - Obtained data from analytical instruments (e.g. NMR, MS or IR data) are uploaded to the Chemotion ELN in open file formats and directly attached to the respective ELN experiment entry including instrumental setup metadata.
 - Metadata related to the obtained data, such as temperature or solvent of measurement, have to be provided according to metadata standards, e.g. x.
 
-***Data producing methods:***
+## Data producing methods:
 
 - Data can be collected during the experiment or after the experiment by analysing the obtained product.
 - Manually determined data: Experimental observations, appearance, yield, melting/boiling point, optical rotation, TLC Rf values, refraction index, etc.
@@ -61,13 +61,13 @@ The main goal of a synthetic organic or inorganic chemist is to synthesise desir
 
 ** *This table will be continuously updated with new recommendations on interoperable open file formats.**
 
-***Data analysis:***
+## Data analysis:
 
 - Research data are processed, [analysed](/docs/Problems/Data%20analysis) and compared (also to data of other experiments) within the Chemotion ELN.
 - Optionally, preprocessing of digital data with software of analytical device before data are transferred to the Chemotion ELN (cf. data producing methods).
 - A detailed view, evaluation and interpretation of results is carried out with the Chemotion ELN features.
 
-***Publication of research data:***
+## Publication of research data:
 
 - In addition to a research article in a scientific journal, the underlying research data are published in a repository and linked to the article to realise research data management according to the [FAIR data principles](/docs/Topics%20and%20Concepts/FAIR%20data%20principles) ([Best practice examples](/docs/Topics%20and%20Concepts/Best%20practice)).
 - Data publication in a repository includes raw and processed data for reuse.
