--- a/docs/20_role/30_student.mdx
+++ b/docs/20_role/30_student.mdx
@@ -2,15 +2,50 @@
 title: "Student"
 ---
 
+## Applies to:
 
-Article about Student
+This article applies to students, who are about to start their bachelor or master thesis.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ut dolor a justo iaculis sagittis. Nullam sit amet sodales ligula. Nam vel turpis ante. Ut vestibulum, urna ut porttitor volutpat, nisi massa malesuada ex, vitae mattis lorem nisi ac lorem. Fusce bibendum nec enim at tincidunt. Phasellus convallis magna dui, eget cursus eros bibendum id. Phasellus eu lacinia quam. Morbi venenatis suscipit elit ut consectetur. Praesent ut quam ipsum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque non faucibus massa. Duis consequat efficitur magna, non dignissim mauris imperdiet eget.
 
-Ut egestas metus ut ante luctus, tristique malesuada ante pretium. Mauris aliquet consectetur eros, eget mollis augue congue sollicitudin. Mauris iaculis metus vitae felis hendrerit, ac tempus tortor vestibulum. Proin ullamcorper, metus sed ultrices molestie, velit nulla feugiat odio, a fermentum erat sem quis sem. Maecenas pharetra mauris non luctus hendrerit. Donec non mauris blandit, fringilla lacus sed, porttitor sem. Integer a ante massa. Morbi rhoncus quis odio in maximus. Nullam mollis pulvinar condimentum. Nunc nulla magna, porttitor a porttitor id, suscipit non nibh. Fusce blandit purus maximus felis egestas imperdiet. Donec quis convallis nibh.
+## Data production:
 
-Cras dictum pharetra lectus, a laoreet nulla commodo at. Proin aliquet risus eu nisi tempus, non lobortis mauris tristique. Vivamus at libero a risus ornare commodo. Integer in ante vestibulum, feugiat dolor at, blandit dui. Sed at dui non erat hendrerit ornare sit amet at lorem. Sed sed urna sodales, hendrerit elit sit amet, auctor turpis. Proin lobortis urna nec pulvinar iaculis. Morbi vel mollis erat, ut finibus eros. Phasellus in pharetra dui. Etiam vel ultricies tellus, in mollis ante. Aenean vel lectus odio. Ut tincidunt vel neque non faucibus. Mauris pulvinar velit fermentum, fermentum urna ac, ornare turpis. Integer vel tristique orci. Nulla malesuada mattis erat sed condimentum. Cras dui libero, iaculis a fringilla eget, luctus a diam.
+***How:***          
+While working in the lab for a bachelor or master thesis plenty of data will be produced, for example the reaction protocol or the analytical data or metadata.
 
-Integer cursus ipsum quis turpis feugiat, in elementum odio porta. Nulla nec ligula metus. Aliquam varius nisi nec mauris bibendum tristique. Maecenas vel elit ac leo suscipit facilisis eget non est. Donec aliquam suscipit erat. Praesent at odio et magna vestibulum euismod a eu nunc. Sed tristique id sapien quis aliquet. Suspendisse ac odio volutpat, mattis odio at, aliquam mauris. Curabitur ac nisl vitae ante interdum auctor vel sed ex. Donec ac accumsan magna. Sed orci justo, commodo dictum nibh vel, vestibulum posuere metus. Proin mollis sapien at libero tempor porttitor. Quisque quis risus posuere, varius diam sed, consectetur risus.
+***Note:***         
+If you want to learn more about domain-specific data production methods, you can also look at the user profiles.
 
-Nunc arcu leo, porta ac laoreet vitae, blandit eget elit. Vestibulum id augue ullamcorper, interdum magna nec, cursus odio. Donec quam justo, posuere sit amet ligula sit amet, pharetra pellentesque dolor. Nullam ante dui, porta vitae auctor eget, accumsan ut mauris. Nunc finibus malesuada accumsan. Sed at libero a ex sollicitudin aliquam. Donec in ante eget nisi cursus euismod. Fusce lorem justo, mollis quis commodo in, pulvinar at libero.
+## Data documentation:
+
+***Why:***          
+The use of well-organised and documented data plays an important role in finding, searching, and using research data throughout the data life cycle.
+
+***How:***          
+For the documentation of these data, a classic paper-based lab journal or an electronic lab journal (ELN) can be used.
+
+***Considerations:***              
+The use of a paper-based lab journal seems to be an easy and efficient way to document data. But the use of an ELN like Chemotion has plenty of 			advantages in the long run. For example, in Chemotion all data obtained from an experiment can be linked to your protocol, which is an easy way to have a well-organised research data set at the end of the thesis. Additionally, the reaction protocol can be exported in a standardised form, which is suitable for publication in the experimental section of a thesis or a paper. <br /> Furthermore, the data are machine readable and therefore easily findable which is one aspect for FAIR data (Findable, Accessible, Interoperable, Re-usable). Also the other aspects should be fulfilled, this increases the machine-actionability for future use of the data. Another advantage of an ELN is that it can be coupled with a repositorium, which will ease the publication process.
+
+
+## Data processing:
+
+***Why:***          
+The obtained raw data need to be processed for the interpretation, e.g. integration of NMR peaks or picking of IR bands.
+
+***How:***          
+Data can be processed by different software for each method. But an ELN can give you one software tool for the processing of different methods. In Chemotion the software tool Chemspectra is implemented, which can be used for NMR and IR at the moment. Further methods will be added in the future.
+
+***Considerations:***           
+By documenting and processing data in the same software tool synergies will be obtained. For example Chemspectra can control automatically, if the integral of the NMR spectra fits to the target molecule of the connected synthesis. After processing your data in Chemspectra you can export your data in a standardised peak list, which can be added in the experimental section of a thesis or a publication.
+
+
+## Sharing, preserving and re-using data:
+
+***Why:***      
+Collaboration is easier if well-organised data is accessible. To conduct further research previous research can be reviewed and already existing data is reusable.
+
+***How:***          
+An ELN represents a powerful internal database. Within Chemotion your own results can be searched by structure or keyword. Furthermore, scientific search engines like SciFinder can be implemented into an ELN. 
+
+***Note:***         
+By using the Chemotion ELN, research data and associated metadata are transferred directly to the Chemotion repository and automatically shared with other repositories.
