--- a/docs/10_user_profiles/10_synthetic_chemistry.mdx
+++ b/docs/10_user_profiles/10_synthetic_chemistry.mdx
@@ -22,7 +22,7 @@ The main goal of a synthetic organic or inorganic chemist is to synthesise desir
 
 ## Planning of experiments:
 
-- The implementation of newly inspired ideas is supported by previous work stored in the local instance of the electronic lab notebook (e.g. [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html)) of the own research group ([overview of ELNs for synthetic chemists](/docs/topics/ELN)), scientific literature or datasets published in [repositories](/docs/topics/Repositories) (discipline-specific repositories such as the [Chemotion repository](https://www.chemotion-repository.net/welcome)).
+- The implementation of newly inspired ideas is supported by previous work stored in the local instance of the electronic lab notebook (e.g. [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html)) of the own research group ([overview of ELNs for synthetic chemists](/docs/topics/eln)), scientific literature or datasets published in [repositories](/docs/topics/repositories) (discipline-specific repositories such as the [Chemotion repository](https://www.chemotion-repository.net/welcome)).
 - Experimental design follows a logical order to achieve a specific goal, such as increasing yield or purity.
 - Planning is concluded by adding the experimental details (e.g. quantities and scheduling procedures). All metadata is documented in an ELN (e.g. Chemotion ELN) including references.
 
@@ -72,4 +72,4 @@ The main goal of a synthetic organic or inorganic chemist is to synthesise desir
 - In addition to a research article in a scientific journal, the underlying research data are published in a repository and linked to the article to realise research data management according to the [FAIR data principles](/docs/topics/fair) ([Best practice examples](/docs/topics/best_practice)).
 - Data publication in a repository includes raw and processed data for reuse.
 - The use of the Chemotion ELN enables a direct transfer of research data and the respective metadata into the Chemotion Repository. Subsequently, these data are automatically shared with other repositories, e.g. [PubChem](https://pubchem.ncbi.nlm.nih.gov/). For the publication of research data in other discipline-specific repositories, such as the [CCDC](https://www.ccdc.cam.ac.uk/) for crystallographic data, data have to be exported from the Chemotion ELN and uploaded into the respective database.
-- A [persistent identifier](/docs/topics/PID) (e.g. DOI) is generated for a dataset by a repository (via [DataCite](https://datacite.org/) for the Chemotion Repository), which is given in the journal publication or corresponding supporting information to link the data publication with the manuscript.
+- A [persistent identifier](/docs/topics/pid) (e.g. DOI) is generated for a dataset by a repository (via [DataCite](https://datacite.org/) for the Chemotion Repository), which is given in the journal publication or corresponding supporting information to link the data publication with the manuscript.
