Rename domains and roles features

--- a/docs/20_role/30_student.mdx
+++ b/docs/20_role/30_student.mdx
@@ -13,7 +13,7 @@ This article applies to students, who are about to start their bachelor or maste
 While working in the lab for a bachelor or master thesis plenty of data will be produced, for example the reaction protocol or the analytical data or [metadata](/docs/topics/metadata).
 
 ***Note:***         
-If you want to learn more about domain-specific data production methods, you can also look at the [user profiles](/docs/domains/guide).
+If you want to learn more about domain-specific data production methods, you can also look at the [domain-specific profiles](/docs/domains/guide).
 
 ## Data documentation:
 
