fix: line breaks in about

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -11,12 +11,12 @@ The NFDI4Chem Knowledge Base is hosted by the Johannes Gutenberg University Main
 
 ## Responsible Spokesperson
 
-Dr. Johannes Liermann
-Johannes Gutenberg University Mainz
-Department of Chemistry
-55099 Mainz
-Germany
+Dr. Johannes Liermann\
+Johannes Gutenberg University Mainz\
+Department of Chemistry\
+55099 Mainz\
+Germany\
 Mail: [liermann@uni-mainz.de](mailto:liermann@uni-mainz.de)
 
-[Legal Notice](https://www.uni-mainz.de/eng/102.php)
+[Legal Notice](https://www.uni-mainz.de/eng/102.php)\
 [Privacy](https://www.uni-mainz.de/eng/144.php)
