--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -16,7 +16,7 @@ Johannes Gutenberg University Mainz<br/>
 Department of Chemistry<br/>
 55099 Mainz<br/>
 Germany<br/>
-Mail: [liermann@uni-mainz.de](mailto:liermann@uni-mainz.de)
+Mail: [nfdi4chem@uni-mainz.de](mailto:nfdi4chem@uni-mainz.de)
 
 [Legal Notice](https://www.uni-mainz.de/eng/102.php)<br/>
 [Privacy](https://www.uni-mainz.de/eng/144.php)
