DO NOT MERGE-style draft

--- a/docs/10_domains/10_synthetic_chemistry.mdx
+++ b/docs/10_domains/10_synthetic_chemistry.mdx
@@ -2,9 +2,10 @@
 title: "Synthetic Organic/Inorganic Chemistry"
 ---
 
-## Summary:
+:::info Summary:
 
 The main goal of a synthetic organic or inorganic chemist is to synthesise desired compounds. Established methods are applied, or new synthetic methods are developed. A typical workflow starts with the planning of the experiments and methods. These are then conducted and research data as well as accompanying metadata are collected along the way. Once the final product is obtained, it is analysed with suitable methods to identify properties of the synthesised material or to ascertain the efficacy of the selected synthetic method. Processing and interpretation of the obtained research data will lead to a proof of concept for a given reaction, optimised conditions for future experiments or upscaling.
+:::
 
 ## Type of experiments:
 
@@ -43,23 +44,25 @@ The main goal of a synthetic organic or inorganic chemist is to synthesise desir
 
 |Analytical method|Exemplary proprietary file extensions|Typical size of propietary file|Converter to open file format|Recommendation for open file extension*|File format|File size of open format|
 |:------------|:------------|:------------|:------------|:------------|:------------|:------------|
-|NMR spectroscopy|.fid|<1-50 MB|MNova <br /> Topspin|.jdx <br /> .zip<br />|JACAMP-DX<br />NMReDATA|~1 MB|
-|Mass spectrometry|.raw <br /> .d <br /> .baf|~250 MB|Proteowizard|.mzML|mzML|~250 MB|
-|IR spectroscopy|.ispd <br /> .icIR|<1 MB| |.dx|JCAMP-DX|<1 MB|
-|Raman spectroscopy|.dpt <br /> .spc <br /> .icRaman <br /> .sps <br /> .acs|<1 MB|proprietary software|.dx|JCAMP-DX|<1 MB|
-|UV/vis spectroscopy|.dsw <br /> .str <br /> .bsk <br /> .bkn <br /> .ksd <br /> .jws <br /> .jwb <br /> .str8 <br /> .spc <br /> .sre|<1 MB|proprietary software|.csv|comma-separated values|<1 MB|
-|Fluorescence spectroscopy|.fds <br /> .fs2f <br /> .jws <br /> .opj|<1 MB|proprietary software|.dx|JCAMP-DX|<1 MB|
+|NMR spectroscopy|.fid|<1-50 MB|MNova<br/>Topspin|.jdx<br/>.zip<br/>|JACAMP-DX<br/>NMReDATA|~1 MB|
+|Mass spectrometry|.raw<br/>.d <br/>.baf|~250 MB|Proteowizard|.mzML|mzML|~250 MB|
+|IR spectroscopy|.ispd <br/> .icIR|<1 MB| |.dx|JCAMP-DX|<1 MB|
+|Raman spectroscopy|.dpt<br/>.spc<br/>.icRaman<br/>.sps<br/>.acs|<1 MB|proprietary software|.dx|JCAMP-DX|<1 MB|
+|UV/vis spectroscopy|.dsw<br />.str<br/>.bsk<br/>.bkn<br/> .ksd<br/>.jws<br/>.jwb<br/>.str8<br/>.spc<br/>.sre|<1 MB|proprietary software|.csv|comma-separated values|<1 MB|
+|Fluorescence spectroscopy|.fds<br/>.fs2f<br/>.jws<br/>.opj|<1 MB|proprietary software|.dx|JCAMP-DX|<1 MB|
 |Single crystal XRD|.raw|~1 GB|proprietary software|.cif|crystallographic information file|<1 MB|
 |Powder XRD|.raw|<1 MB|proprietary software|.xyd|text file|<1 MB|
-|Gas chromatography|.gcd <br /> .d|~2 MB|proprietary software|.txt|text file|<1 MB|
+|Gas chromatography|.gcd<br/>.d|~2 MB|proprietary software|.txt|text file|<1 MB|
 |HPLC|.xls|<1 MB|proprietary software|.csv|comma-separated values|<1 MB|
-|Cyclic voltammetry|.nox <br /> .pssession|~8 MB|proprietary software|.txt|text file|<1 MB|
+|Cyclic voltammetry|.nox<br/>.pssession|~8 MB|proprietary software|.txt|text file|<1 MB|
 |EPR spectroscopy|.spe|<1 MB|proprietary software|.txt|text file|<1 MB|
-|Differential scanning calorimetry|.ngb-dsu <br /> .ngb-taa|<1 MB|proprietary software|.csv|comma-separated values|<1 MB|
+|Differential scanning calorimetry|.ngb-dsu<br/>.ngb-taa|<1 MB|proprietary software|.csv|comma-separated values|<1 MB|
 |Elemental analysis| | |proprietary software|.txt|text file|<1 MB|
 |Physisorption|.smp|<1 MB|proprietary software|.csv|comma-separated values|<1 MB|
 
-** *This table will be continuously updated with new recommendations on interoperable open file formats.*
+:::note *Note: <br />
+This table will be continuously updated with new recommendations on interoperable open file formats.
+:::
 
 ## Data analysis:
 
