--- a/docs/20_role/00_guide.mdx
+++ b/docs/20_role/00_guide.mdx
@@ -2,6 +2,14 @@
 title: "Guide"
 ---
 
+Looking for information on managing research data in chemistry? Choose your role and find solutions for role-specific data management problems.
 
+[Research Group Leader](/docs/role/research_group_leader)
 
-Guide for Role as point of entry
+[Research Group Member](/docs/role/research_group_member)
+
+[Student](/docs/role/student)
+
+[Data Steward](/docs/role/data_steward)
+
+[Service Administrator](/docs/role/service_administrator)
