--- a/docs/00_intro.mdx
+++ b/docs/00_intro.mdx
@@ -4,6 +4,7 @@ title: "Introduction"
 
 The NFDI4Chem knowledge base provides information and recommendations for digitising all key steps in chemical research to support scientists in their efforts to collect, store, process, analyze, disclose and reuse research data. Actions to promote Open Science and Research Data Management (RDM) in accordance with the FAIR Data principles are presented by everyday users and address everything from planning and implementation to publication and re-use.
 
-![LinkedIn_Image](/img/LinkedIn_Image.png)
+![linkedin](/img/linkedin.png)
+
 
 ...
