--- a/docs/20_role/50_service_administrator.mdx
+++ b/docs/20_role/50_service_administrator.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Student3"
+title: "Student4"
 ---
 
 ## Applies to:
@@ -9,45 +9,52 @@ This article applies to students, who are about to start their bachelor or maste
 
 ## Data production:
 
-:wrench: How:    
+***How:***           
 While working in the lab for a bachelor or master thesis plenty of data will be produced, for example the reaction protocol or the analytical data or [metadata](/docs/topics/metadata).
 
-:exclamation: Note:       
+
+:::note Note:        
 If you want to learn more about domain-specific data production methods, you can also look at the [domain-specific profiles](/docs/domains/guide).
+:::
 
 ## Data documentation:
 
-:question: Why: <br />  
+***Why:***      
 The use of [well-organised](/docs/problems/data_organisation) and [documented data](/docs/problems/data_documentation) plays an important role in finding, searching, and using research data throughout the [data life cycle](/docs/topics/data_life_cycle).
 
-:wrench: How: <br />         
+
+***How:***        
 For the [documentation of these data](/docs/problems/data_documentation), a classic paper-based lab journal or an [electronic lab journal (ELN)](/docs/topics/eln) can be used.
 
-:exclamation: Consideration: <br />               
+
+:::caution Considerations:              
 The use of a paper-based lab journal seems to be an easy and efficient way to [document data](/docs/problems/data_documentation). But the use of an [ELN](/docs/topics/eln) like [Chemotion](https://www.chemotion.net/chemotionsaurus/index.html) has plenty of advantages in the long run. For example, in [Chemotion](https://www.chemotion.net/chemotionsaurus/index.html) all data obtained from an experiment can be linked to your protocol, which is an easy way to have a [well-organised research data set](/docs/problems/data_organisation) at the end of the thesis. Additionally, the reaction protocol can be exported in a [standardised form](/docs/topics/format_standards), which is suitable for [publication](/docs/problems/data_publication) in the experimental section of a thesis or a paper. <br /> Furthermore, the data are machine readable and therefore easily findable which is one aspect for [FAIR data (Findable, Accessible, Interoperable, Re-usable)](/docs/topics/fair). Also the other aspects should be fulfilled, this increases the machine-actionability for future use of the data. Another advantage of an [ELN](/docs/topics/eln) is that it can be coupled with a [repositorium](/docs/topics/repositories), which will ease the [publication process](/docs/problems/data_publication).
+:::
 
 
 ## Data processing:
 
-`Why:`         
+***Why:***        
 The obtained raw data need to be processed for the interpretation, e.g. integration of NMR peaks or picking of IR bands.
 
-`How:`    
+
+***How:***         
 Data can be processed by different software for each method. But an [ELN](/docs/topics/eln) can give you one software tool for the processing of different methods. In [Chemotion](https://www.chemotion.net/chemotionsaurus/index.html) the software tool Chemspectra is implemented, which can be used for NMR and IR at the moment. Further methods will be added in the future.
 
-`Consideration:`         
+
+:::caution Considerations:         
 By [documenting](/docs/problems/data_documentation) and processing data in the same software tool synergies will be obtained. For example Chemspectra can control automatically, if the integral of the NMR spectra fits to the target molecule of the connected synthesis. After processing your data in Chemspectra you can export your data in a standardised peak list, which can be added in the experimental section of a thesis or a [publication](/docs/problems/data_publication).
+:::
 
 
 ## Sharing, preserving and re-using data:
 
-:question: Why: <br />    
+`Why:`
 Collaboration is easier if [well-organised data](/docs/problems/data_organisation) is accessible. To conduct further research previous research can be reviewed and already existing data is reusable.
 
-:wrench: How: <br />        
+`How:`
 An [ELN](/docs/topics/eln) represents a powerful internal database. Within [Chemotion](https://www.chemotion.net/chemotionsaurus/index.html) your own results can be searched by structure or keyword. Furthermore, scientific search engines like SciFinder can be implemented into an [ELN](/docs/topics/eln). 
 
-:::info Note:
-      
+:::info Note:        
 By using the [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html), research data and associated [metadata](/docs/topics/metadata) are transferred directly to the [Chemotion repository](https://www.chemotion-repository.net/welcome) and automatically shared with other [repositories](https://www.re3data.org/).
 :::
